// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AufgabenSidebar Rendering should render list of Aufgaben 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col h-full border-r border-gray-200"
  >
    <h2
      class="p-4 text-xl font-bold"
    >
      Aufgabenliste
    </h2>
    <div
      class="overflow-y-auto"
    >
      <div
        class="p-3 cursor-pointer border-b border-gray-200 hover:bg-gray-50 bg-gray-100"
        data-testid="aufgabe-item"
        role="button"
      >
        <div
          class="font-medium"
        >
          A1
        </div>
        <div
          class="text-sm text-gray-600"
        >
          Nicht zugewiesen · 1.1.2024
        </div>
      </div>
      <div
        class="p-3 cursor-pointer border-b border-gray-200 hover:bg-gray-50 "
        data-testid="aufgabe-item"
        role="button"
      >
        <div
          class="font-medium"
        >
          A2
        </div>
        <div
          class="text-sm text-gray-600"
        >
          Max · 2.1.2024
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AufgabenSidebar Rendering should show error message when error 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col h-full border-r border-gray-200"
  >
    <h2
      class="p-4 text-xl font-bold"
    >
      Aufgabenliste
    </h2>
    <div
      class="overflow-y-auto"
    >
      <div
        class="p-4"
      >
        Fehler beim Laden
      </div>
    </div>
  </div>
</DocumentFragment>
`;
